<resources>
    <string name="app_name">UniShop_EAM</string>
    <string name="imagen_principal">Imagen Principal</string>
    <string name="encendido">Encendido</string>
    <string name="apagado">Apagado</string>
    <string name="boton_flotante">Boton flotante</string>
    <string name="img_producto">Imagen del producto</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="precio_producto">Precio del producto</string>
    <string name="descuento_producto">Descuento del producto</string>
    <string name="anadir_carrito">Añadir al carrito</string>
    <string name="tecnologia">Tecnología</string>
    <string name="instrumentos">Instrumentos</string>
    <string name="libros">Libros</string>deportes
    <string name="deportes">Deportes</string>
    <string name="ropa">Ropa</string>
    <string name="otros">Otros</string>
    <string name="hint_cajon_busqueda">Escribe el nombre del producto</string>

    <string name="email">Email</string>
    <string name="password">****************</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="ingrese_su_correo_electronico">Ingrese su correo electronico</string>

    <string name="olvide_mi_contrase_a">Olvide mi contraseña</string>
    <string name="unishop">UniShop</string>
    <string name="ingresee_su_correo_electronico">Ingresee su correo electronico</string>

    <string name="correo_electronico1">Correo Electronico</string>
    <string name="a">********************</string>
    <string name="password1">*******************</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesiòn</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="ubicaci_n">Ubicaciòn</string>
    <string name="pass">***************</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="pass1">***************</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="tienes_problemas_para_iniciar_sesi_n">¿Tienes problemas para iniciar sesiòn?</string>
    <string name="enviar_enlace">Enviar enlace</string>
    <string name="crear_una_cuenta_nueva">Crear una cuenta nueva</string>
    <string name="Prueba">s</string>
</resources>