<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompraActivity">


    <ImageButton
        android:id="@+id/btn_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:background="@null"
        android:contentDescription="@string/imagen_principal"/>


    <ToggleButton
        android:id="@+id/btn_notificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/btn_info_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/apagado"
        android:textOn="@string/encendido"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/boton_flotante"
        android:src="@android:drawable/star_on"/>

</LinearLayout>