<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_registrar">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_registrar"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/text_uniShopLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fuente2"
        android:padding="25dp"
        android:text="@string/unishop"
        android:textAlignment="center"
        android:textSize="65sp"
        android:textStyle="bold"
        android:textColor="@color/black"


        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_correo_layout"
        style="@style/ti_layout">

        <EditText
            android:id="@+id/text_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_forms"
            android:gravity="center"
            android:hint="@string/correo_electronico1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_nombre_layout"
        style="@style/ti_layout">

        <EditText
            android:id="@+id/text_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_forms"
            android:hint="@string/nombre_completo"
            android:gravity="center"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_telefono_layout"
        style="@style/ti_layout">

        <EditText
            android:id="@+id/text_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_forms"
            android:hint="@string/numero_de_telefono"
            android:gravity="center"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_ubicacion_layout"
        style="@style/ti_layout">

        <EditText
            android:id="@+id/text_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_forms"
            android:hint="@string/ubicaci_n"
            android:gravity="center"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"


        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_password_layout"
        style="@style/ti_layout">

        <EditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_forms"
            android:hint="@string/pass1"
            android:gravity="center"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirmarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_contrase_a"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"


        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_confirmarPassword_layout"
        style="@style/ti_layout">

        <EditText
            android:id="@+id/text_confirmarPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_forms"
            android:hint="@string/pass"
            android:gravity="center"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"

        android:text="@string/registrarse"
        android:layout_marginTop="15dp"
        app:cornerRadius="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/yaCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¿Ya tienes una cuenta?"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"

            />

        <TextView
            android:id="@+id/iniciaSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text=" Inicia Sesiòn!"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20sp"

            />

    </LinearLayout>

</LinearLayout>
</ScrollView>