<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"

   >






    <TextView
        android:id="@+id/text_uniShopLogin4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fuente2"
        android:layout_marginTop="20sp"
        android:text="@string/unishop"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="65sp"
        android:textStyle="bold"

        />

    <include
        android:id="@+id/barra_s"
        layout="@layout/fragment_barra_superior"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_marginTop="10dp">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_instru"
                style="@style/btn_categoria"
                android:layout_columnSpan="1"
                android:text="..."
                >

            </Button>

            <TextView
                style="@style/txt_categoria"
                android:text="@string/instrumentos"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_libros"
                style="@style/btn_categoria"
                android:layout_columnSpan="1"
                android:text="..."
                >

            </Button>

            <TextView
                style="@style/txt_categoria"
                android:text="@string/libros"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_tec"
                style="@style/btn_categoria"
                android:layout_columnSpan="1"
                android:text="..."
                >

            </Button>

            <TextView
                style="@style/txt_categoria"
                android:text="@string/tecnologia"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_deportes"
                style="@style/btn_categoria"
                android:layout_columnSpan="1"
                android:text="..."
                >

            </Button>

            <TextView
                style="@style/txt_categoria"
                android:text="@string/deportes"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_ropa"
                style="@style/btn_categoria"
                android:layout_columnSpan="1"
                android:text="..."
                >

            </Button>

            <TextView
                style="@style/txt_categoria"
                android:text="@string/ropa"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_otros"
                style="@style/btn_categoria"
                android:layout_columnSpan="1"
                android:text="..."
                >

            </Button>

            <TextView
                style="@style/txt_categoria"
                android:text="@string/otros"/>



        </LinearLayout>

    </GridLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="18dp"
        android:text="Ofertas"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_productos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <Button
        android:id="@+id/btn_prueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"

        android:backgroundTint="@color/red"
        android:text="Prueba"
        app:cornerRadius="15dp">

    </Button>





</LinearLayout>