<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity_login"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/text_uniShopLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fuente2"
        android:padding="25dp"
        android:text="@string/unishop"
        android:textAlignment="center"
        android:textSize="65sp"
        android:textStyle="bold"
        android:textColor="@color/black"

        />

    <TextView
            android:id="@+id/ingresarCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_su_correo_electronico"
            android:textAlignment="center"
            android:textSize="20sp"
           android:textColor="@color/black"
            android:layout_marginTop="50dp"

            />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_correo_layout"
        style="@style/ti_layout">

        <EditText
            android:id="@+id/text_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_forms"

            android:gravity="center"
             />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/ingresarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_su_contrase_a"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_password_layout"
        style="@style/ti_layout">

        <EditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_forms"
            android:inputType="textPassword"

            android:gravity="center"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"

        android:text="@string/iniciar_sesi_n"
        android:layout_marginTop="15dp"
        app:cornerRadius="15dp"/>

    <TextView
        android:id="@+id/txtOlvidePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Olvide mi contraseña"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:layout_marginTop="15dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/noCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¿No tienes una cuenta?"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"

            />
        <TextView
            android:id="@+id/txtRegistrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Registrate!"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_marginTop="15dp"

            />

    </LinearLayout>
  </LinearLayout>